--- a/public/site.css
+++ b/public/site.css
@@ -1,3 +1,19 @@
+h2,
+h3 {
+  margin: 10px;
+  font-size: 1.2em;
+}
+
+h3 {
+  font-size: 1em;
+}
+
+p {
+  font-size: 0.85em;
+  margin: 10px;
+  text-align: left;
+}
+
 #body {
     width: 100%;
     height: 100%;
@@ -35,4 +51,20 @@
     height: 50px;
     border-radius: 50%;
     cursor: pointer;
+}
+.map-overlay {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    background: rgba(255, 255, 255, 0.8);
+    margin-left: 20px;
+    font-family: Arial, sans-serif;
+    overflow: auto;
+    border-radius: 3px;
+}
+#news {
+top: 0;
+height: 120px;
+margin-top: 100px;
+width: 250px;
 }
